# package-utils

./: .bumpversion.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  instantiate-new-project.yml  trigger-template-sync.yml
config/: bumpversion.cfg
docs/: generic-storage-library.md  storage-decision-log.md
src/package_utils/arrays/: __init__.py  compression.py
src/package_utils/cli/: __init__.py  cli_runner.py  entry_point.py  runner.py
src/package_utils/cli/convertors/: __init__.py  class_.py  dataclass.py  method.py  parameter.py
src/package_utils/context/: __init__.py  context.py  entry_point.py
src/package_utils/context/loaders/: config.py  loaders.py  options.py  secrets_.py
src/package_utils/context/models/: __init__.py  models.py
src/package_utils/dataclasses/: mixins.py
src/package_utils/jobs/: __init__.py  jobs.py
src/package_utils/main/: main.py
src/package_utils/storage/: __init__.py  atomic.py  cached_file_content.py  database.py  mapping.py  migrations.py  read_cache.py  schema.py  store.py  store_field.py  tables.py
src/python_package_template/cli/: entry_point.py
tests/: test_cli_entry_point.py  test_main.py
tests/arrays/: test_compression.py
tests/cli/: test_create_entry_point.py  test_extract_path_class.py  test_instantiate_from_cli_args.py
tests/cli/models/: class_model.py  class_model_with_string_annotations.py  dataclass_model.py  dataclass_model_with_string_annotations.py
tests/context/: test_context.py  test_entry_point.py  test_models.py  test_properties.py
tests/context/models/: config.py  options.py  options_normal_class.py  secrets_.py
tests/dataclasses/: test_mixins.py
tests/jobs/: test_jobs.py
tests/storage/: conftest.py  fields.py  test_atomic.py  test_cached_file_content.py  test_migrations.py  test_postgres_conformance.py  test_schema.py  test_sqlite_storage.py  test_store_field.py
