[project]
name = "package-utils"
version = "0.8.4"
description = "Common utilities for Python packages"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0, <0.16",
]

[project.optional-dependencies]
context = [
    "dacite >=1.8.1, <2",
    "PyYaml >=6.0.1, <7",
    "superpathlib >=2.0.0, <3",
]
dataclasses = [
    "dacite >=1.8.1, <2",
]
arrays = [
    "numpy >=1.26, <3",
    "blosc2 >=2.5, <5",
]
storage = [
    "superpathlib >= 2.0.0, <3",
    "SQLAlchemy >=2, <3",
    "alembic >=1.13, <2",
]
postgres = [
    "psycopg[binary] >=3, <4",
]
dev = [
    # context
    "dacite >=1.8.1, <2",
    "PyYaml >=6.0.1, <7",
    "superpathlib >=2.0.0, <3",

    # storage
    "SQLAlchemy >=2, <3",
    "alembic >=1.13, <2",

    # arrays
    "numpy >=1.26, <3",
    "blosc2 >=2.5, <5",

    # postgres backend driver
    "psycopg[binary] >=3, <4",

    "hypothesis >=6.91.0, <7",
    "package-dev-tools >=0.8.1, <1",
    "package-dev-utils >=0.1.6, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/package-utils"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest tests"
omit = [
    # requires a live PostgreSQL server
    "tests/storage/test_postgres_conformance.py",
]

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = "blosc2.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # annotated with Any
    "D",        # docstrings
    "G004",     # logging f-string
    "D1",       # missing docstrings
    "D200",     # one-line docstring
    "D203",     # conflicts with D211
    "D205",     # blank line between summary and description
    "D212",     # conflicts with D213
    "D401",     # imperative first line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401"  # unused import
]
"tests/*" = [
    "S101",    # assert used
    "PLR2004"  # magic value used in comparison
]
"tests/storage/fields.py" = [
    "N801"  # namespace classes are lowercase SQL identifiers (table name / column prefix)
]

[tool.setuptools.package-data]
package_utils = ["py.typed"]
